--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@
 
 }
 
+a {
+    text-decoration: none;    
+}
+
 .main-logo {
     font-family: "gilroyextrabold", "Arial black", sans-serif;
     font-size: 48px;
