--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,21 @@ a {
         
 }
 
+.search,
+.login-link,
+.buy li {
+    font-family: "open-sanslight", "Arial", sans-serif;
+    font-size: 15px;
+    line-height: 30px;
+    letter-spacing: 0.2em;
+    color: #000000;
+}
+
+.search input {
+    opacity: 0.3;
+    border: none;
+}
+
 .page-navigation li {
     font-family: "giltoyextrabold", "Arial black", sans-serif;
     font-size: 18px;
@@ -44,5 +59,4 @@ a {
     font-size: 15px;
     line-height: 30px;
     letter-spacing: 0.01em;
-    color: #464646;
 }
