--- a/css/style.css
+++ b/css/style.css
@@ -137,11 +137,37 @@ ____________________________
     list-style-type: none;
 }
 
+.item-list p {
+    font-family: "gilroyextrabold", "Arial black", sans-serif;
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: 0.01em;
+    color: #000000;
+}
+
+.features tr {
+    font-family: "open-sanslight", "Arial", sans-serif;
+    font-size: 13px;
+    line-height: 20px;
+    letter-spacing: 0.01em;
+    color: #464646;
+}
+
+.features tr:first-child {
+    font-family: "gilroyextrabold", "Arial black", sans-serif;
+    font-size: 36px;
+    line-height: 48px;
+    letter-spacing: 0.01em;
+    color: #000000;
+}
+
+
 .button {
     font-family: "gilroyextrabold", "Arial black", sans-serif;
     font-size: 18px;
     line-height: 24px;
     letter-spacing: 0.2em;
     text-transform: uppercase;
+    color: #000000;
 }
 
