--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,8 @@ ____________________________
     font-family: "open-sanslight", "Arial", sans-serif;
     font-size: 15px;
     line-height: 30px;
-    letter-spacing: 0.01em;
+    letter-spacing: 0.01em; 
+    color: #464646;
 }
 
 .best-items-slider b {
@@ -169,6 +170,16 @@ ____________________________
     border: none;
     background-color: transparent;
 }
+
+.text h3 {
+    font-family: "gilroyextrabold", "Arial black", sans-serif;
+    font-size: 47px;
+    line-height: 48px;
+    letter-spacing: 0.01em;
+    color: #000000;
+}
+
+.text
 
 .button {
     font-family: "gilroyextrabold", "Arial black", sans-serif;
