--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,8 @@ ____________________________
     list-style-type: none;
 }
 
-.help-list button {
+.help-list button,
+.modal-feedback button {
     border: none;
     background-color: transparent;
 }
@@ -179,7 +180,39 @@ ____________________________
     color: #000000;
 }
 
-.text
+.logo-companies a {
+    opacity: 0.3;
+}
+
+.about-us h3,
+.contacts h3 {
+    font-family: "gilroyextrabold", "Arial black", sans-serif;
+    font-size: 47px;
+    line-height: 48px;
+    letter-spacing: 0.01em;
+    color: #000000;
+}
+
+.modal-feedback label {
+    font-family: "gilroyextrabold", "Arial black", sans-serif;
+    font-size: 18px;
+    line-height: 24px;
+    color: #000000;
+}
+
+.modal-feedback input[type="text"],
+.modal-feedback input[type="email"],
+.modal-feedback .text-feedback {
+    font-family: "Open sans", "Arial", sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18px;
+    color: rgba(70, 70, 70, 0.4);
+
+    border: none;
+
+    background-color: rgba(242, 242, 242, 0.5);
+}
 
 .button {
     font-family: "gilroyextrabold", "Arial black", sans-serif;
