--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@
 
 @font-face {
     font-family: 'gilroylight';
-    src: url('gilroy_light-webfont.woff2') format('woff2'),
-         url('gilroy_light-webfont.woff') format('woff');
+    src: url('../fonts/gilroy_light-webfont.woff2') format('woff2'),
+         url('../fonts/gilroy_light-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -175,9 +175,13 @@ ____________________________
 }
 
 .help-list button,
-.modal-feedback button {
+.modal-feedback button,
+.filter .button {
     border: none;
-    background-color: transparent;
+
+    width: 200px;
+
+    background-color: #f0c52e;
 }
 
 .text h3 {
@@ -244,14 +248,17 @@ ____________________________
     color: #000000;
 }
 
-.button,
-.filter .button-show {
+.button {
     font-family: "gilroyextrabold", "Arial black", sans-serif;
     font-size: 18px;
     line-height: 24px;
     letter-spacing: 0.2em;
     text-transform: uppercase;
     color: #000000;
+
+    width: 200px;
+
+    background-color: #f0c52e;
 }
 
 
@@ -296,4 +303,54 @@ ____________________________
     letter-spacing: 0.01em;
 
     color: #000000;
+}
+
+.filter-option {
+    font-family: "open-sanslight", "Arial", sans-serif;
+    font-size: 14px;
+    line-height: 40px;
+    letter-spacing: 0.01em;
+
+    color: #000000;
+
+    list-style-type: none;
+}
+
+.sort li {
+    font-family: "Open sans", "Arial", sans-serif;
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: normal;
+    
+    list-style-type: none;;
+}
+
+.sort-item a {
+    color: #000000;
+}
+
+.sort-item:not(:first-child) a {
+    color: rgba(0, 0, 0, 0.3);
+}
+
+.catalog-item {
+    font-family: "gilroyextrabold", "Arial black", sans-serif;
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: 0.01em;
+
+    list-style-type: none;
+}
+
+.catalog-item a {
+    color: #000000;
+}
+
+.catalog-item-price {
+    font-family:  "gilroylight", "Arial", sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.01em;
+
+    color: #464646;
 }
