--- a/css/style.css
+++ b/css/style.css
@@ -354,3 +354,23 @@ ____________________________
 
     color: #464646;
 }
+
+.catalog-item-button li,
+.pagination-list li {
+    list-style-type: none;
+}
+
+.pagination-item {
+    font-family: "gilroyextrabold", "Arial black", sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+}
+
+.pagination-item a {
+    color: rgba(0, 0, 0, 0.3);
+}
+
+.pagination-item-current a {
+    color: #000000;
+}
