--- a/css/style.css
+++ b/css/style.css
@@ -501,3 +501,21 @@ ____________________________
 
     opacity: 1;
 }
+
+.breadcrumbs a:hover,
+.breadcrumbs a:focus {
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.breadcrumbs a:active {
+    color: rgba(0, 0, 0, 0.1);
+}
+
+.sort-item a:hover,
+.sort-item a:focus {
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.sort-item a:active {
+    color: rgba(0, 0, 0, 1);
+}
