--- a/css/style.css
+++ b/css/style.css
@@ -573,13 +573,26 @@ ____________________________
 }
 
 .best-items-slider {
-    display: flex;
     height: 486px;
     padding-left: 90px;
     padding-right: 60px;
     margin-bottom: 106px;
 
-    background-image: linear-gradient(#f7e296 23%, white 23%);
+    background-image: linear-gradient(#f7e296 24%, white 24%);
+}
+
+.container-best-slider {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.best-slider-description {
+    margin-left: 125px;
+    width: 480px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .item-list {
@@ -679,3 +692,4 @@ ____________________________
     display: flex;
     justify-content: space-between;
 }
+
