--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ ____________________________
 
 .item-list li {
     width: 160px;
-    height: 160px;
+    min-height: 160px;
     margin-bottom: 50px;
 
     text-align: center;
