--- a/css/style.css
+++ b/css/style.css
@@ -647,7 +647,6 @@ ____________________________
 
 .contacts-wrapper {
     display: flex;
-    justify-content: space-between;
 }
 
 
@@ -664,7 +663,7 @@ ____________________________
 .main-footer {
     width: 100%;
     display: flex;
-    margin-top: 98px;
+    margin-top: 80px;
     padding-top: 70px;
     padding-left: 0;
 }
@@ -983,3 +982,69 @@ _____________________________________*/
 /*Блок с доставкой, гарантией и кредитом не доделан. оставлю на потом.
 Начинаю делать блоки О нас и Контакты*/
 
+.text-about-us {
+    width: 500px;
+}
+
+.about-us h3 {
+    margin-bottom: 45px;
+}
+
+.about-us,
+.contacts {
+    position: relative;
+}
+
+.about-us h3::before,
+.contacts h3::before {
+    content: "";
+    width: 74px;
+    height: 1px;
+    background-color: black;
+    border: 3px solid black;
+    position: absolute;
+    left: 0;
+    top: -6px;
+}
+
+.text-about-us p:first-child {
+    margin-bottom: 30px;
+}
+
+.text-about-us p:last-child {
+    margin-bottom: 70px;
+}
+
+.text-about-us p {
+    width: 475px;
+}
+
+.delivery-companies {
+    padding-left: 35px;
+    margin-bottom: 60px;
+}
+
+.delivery-companies li {
+    margin-bottom: 10px;
+}
+
+.about-us .button {
+    display: block;
+    margin-left: 25px;
+}
+
+.contacts {
+    margin-left: 100px;
+}
+
+.text-contacts p {
+    margin-bottom: 35px;
+}
+
+.modal-map {
+    margin-bottom: 50px;
+}
+
+.contacts .button {
+    margin-left: 45px;
+}
