--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,7 @@ ____________________________
 .main-footer {
     position: relative;
     background-color: #464646;
+    min-height: 325px;
 }
 
 .main-footer-logo {
@@ -191,7 +192,7 @@ ____________________________
     padding-bottom: 8px;
     padding-right: 0;
     
-    background-color: #ffffff;
+    background-color: transparent;
     background-image: linear-gradient(
         to bottom,
         transparent 0%,
@@ -283,7 +284,8 @@ ____________________________
     padding-right: 0;
     padding-bottom: 8px;
     padding-right: 0;
-    
+
+    background-color: transparent;
     background-image: linear-gradient(
         to bottom,
         transparent 0%,
@@ -356,6 +358,8 @@ ____________________________
     font-weight: normal;
     
     list-style-type: none;;
+
+    margin-right: 30px;
 }
 
 .sort-item a {
@@ -366,12 +370,16 @@ ____________________________
     color: rgba(0, 0, 0, 0.3);
 }
 
-.catalog-item {
+.catalog-item h3 {
     font-family: "gilroyextrabold", "Arial black", sans-serif;
     font-size: 18px;
     line-height: 24px;
     letter-spacing: 0.01em;
 
+    margin: 0;
+}
+
+.catalog-item {
     list-style-type: none;
 }
 
@@ -386,6 +394,8 @@ ____________________________
     letter-spacing: 0.01em;
 
     color: #464646;
+
+    margin: 0;
 }
 
 .catalog-item-button li,
@@ -666,7 +676,8 @@ ____________________________
 
 .main-footer {
     min-height: 323px;
-    width: 100%;
+    width: 1440px;
+    margin: auto;
     display: flex;
     margin-top: 80px;
     padding-top: 60px;
@@ -699,22 +710,32 @@ ____________________________
 
 .sort {
     display: flex;
-    justify-content: space-between;
 }
 
 .sort ul {
     display: flex;
+    margin: 0;
+    padding-top: 25px;
 }
 
 .catalog-list {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    flex-wrap: wrap; 
+    padding-left: 70px;
+    padding-top: 55px;
 }
 
 .pagination-list {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    width: 760px;
+    min-height: 70px;
+    margin: 0;
+    padding: 0;
+    margin-left: 70px;
+
+    background-color: #e5e5e5;
 }
 
 /* Начинается разметка микросетки header
@@ -1158,4 +1179,130 @@ _____________________________________*/
     position: absolute;
     top: 8px;
     left: -22px;
+}
+
+
+
+/*Начинаю микроразметку контента страницы каталога 
+--------------------------------------------------------------------------*/
+
+.container-catalog .page-title {
+    margin-top: 40px;
+    margin-bottom: 22px;
+}
+
+.breadcrumbs {
+    padding: 0;
+    padding-bottom: 30px;
+}
+
+.breadcrumbs li {
+    margin-right: 39px;
+    position: relative;
+}
+
+.breadcrumbs li:not(:last-child)::after {
+    content: "";
+    width: 4px;
+    height: 7px;
+    background: url("../img/nav-arrow.svg") no-repeat;
+    position: absolute;
+    top: 9px;
+    right: -20px;
+}
+
+.container-catalog-filter {
+    width:1440px;
+    min-height: 1287px;
+    margin: auto;
+}
+
+.filters h2,
+.sort h2 {
+    text-transform: uppercase;
+}
+
+.filters,
+.sort {
+    background-color: #efefef;
+}
+
+.sort {
+    position: relative;
+    min-height: 70px;
+    padding-left: 71px;
+}
+
+.sort h2 {
+    padding-top: 23px;
+    margin: 0;
+    margin-right: 15px;
+}
+
+.filters h2 {
+    padding-top: 23px;
+    padding-left: 21px;
+    margin: 0;
+}
+
+.filters {
+    padding-left: 180px;
+}
+
+form.filter {
+    min-width: 290px;
+}
+
+.main-footer-catalog {
+    margin-top: 0;
+}
+
+.catalog-list li {
+    margin-right: 40px;    
+}
+
+.catalog-item img {
+    margin-bottom: 25px;
+}
+
+.catalog-item-option {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 48px;
+}
+
+.catalog-item-option h3 {
+    width: 250px;
+}
+
+.catalog-item-button-back {
+    margin-right: auto;
+    height: auto;
+    padding: 25px 0;
+    
+    background-color: #e5e5e5;
+}
+
+.catalog-item-button-next {
+    margin-left: auto;
+    height: auto;
+    padding: 25px 0;
+
+    background-color: #e5e5e5;
+}
+
+.catalog-item-button-next,
+.catalog-item-button-back {
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.2em;
+}
+
+.pagination-item-list {
+    display: flex;
+    justify-content: space-between;
+
+    padding: 0;
+
+    width: 90px;
 }
