--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ a {
 .search,
 .login-link,
 .buy li {
-    font-family: "open-sanslight", "Arial", sans-serif;
+    font-family: "open_sanslight", "Arial", sans-serif;
     font-size: 15px;
     line-height: 30px;
     letter-spacing: 0.01em;
@@ -72,7 +72,7 @@ a {
     margin-left: -125px;
 }
 
-.header-page-navigation li,
+.header-page-navigation > li,
 .footer-page-navigation li {
     font-family: "gilroyextrabold", "Arial black", sans-serif;
     font-size: 18px;
@@ -100,7 +100,7 @@ ____________________________
 }
 
 .main-footer p {
-    font-family: "open-sanslight", "Arial", sans-serif;
+    font-family: "open_sanslight", "Arial", sans-serif;
     font-size: 15px;
     line-height: 30px;
     color: #ffffff;
@@ -127,7 +127,7 @@ ____________________________
 
 .best-items-slider p,
 .text p {
-    font-family: "open-sanslight", "Arial", sans-serif;
+    font-family: "open_sanslight", "Arial", sans-serif;
     font-size: 15px;
     line-height: 30px;
     letter-spacing: 0.01em; 
@@ -162,7 +162,7 @@ ____________________________
 }
 
 .features tr {
-    font-family: "open-sanslight", "Arial", sans-serif;
+    font-family: "open_sanslight", "Arial", sans-serif;
     font-size: 13px;
     line-height: 20px;
     letter-spacing: 0.01em;
@@ -177,7 +177,8 @@ ____________________________
     color: #000000;
 }
 
-.help-list li {
+.help-list li,
+.subcatalog li {
     list-style-type: none;
 }
 
@@ -309,7 +310,7 @@ ____________________________
 }
 
 .breadcrumbs li {
-    font-family: "open-sanslight", "Arial", sans-serif;
+    font-family: "open_sanslight", "Arial", sans-serif;
     font-size: 14px;
     line-height: 24px;
     letter-spacing: 0.01em;
@@ -341,7 +342,7 @@ ____________________________
 }
 
 .filter-option {
-    font-family: "open-sanslight", "Arial", sans-serif;
+    font-family: "open_sanslight", "Arial", sans-serif;
     font-size: 14px;
     line-height: 40px;
     letter-spacing: 0.01em;
@@ -605,7 +606,7 @@ ____________________________
 .best-slider-description {
     margin-left: 128px;
     min-height: 490px;
-    width: 480px;
+    width: 485px;
     display: flex;
     flex-direction: column;
 }
@@ -754,7 +755,6 @@ ___________________________________________
 
 .main-header-logo {
     align-self: flex-start;
-    margin-bottom: 30px;
 }
 
 .user-navigation,
@@ -766,7 +766,7 @@ ___________________________________________
 }
 
 .search {
-    margin-right: 330px;
+    margin-right: 375px;
     position: relative;
 }
 
@@ -801,7 +801,7 @@ ___________________________________________
 }
 
 .compare {
-    margin-right: 65px;
+    margin-right: 60px;
 }
 
 .main-header .compare::before {
@@ -824,14 +824,14 @@ ___________________________________________
     left: -22px;
 }
 
-.header-page-navigation li:first-of-type {
+.header-page-navigation > li:first-of-type {
     min-width: 220px;
     margin-right: 320px;
 
     position: relative;
 }
 
-.header-page-navigation li:first-of-type::after {
+.header-page-navigation > li:first-of-type::after {
     content: "";
     width: 16px;
     height: 16px;
@@ -855,7 +855,7 @@ ___________________________________________
 
 .caption-slider {
     padding-top: 84px;
-    margin-bottom: 20px;
+    margin-bottom: 17px;
     position: relative;
 }
 
@@ -879,7 +879,7 @@ ___________________________________________
     color: #ffffff;
 
     position: absolute;
-    right: -10px;
+    right: -15px;
     top: -10px;
 }
 
@@ -1309,28 +1309,55 @@ form.filter {
     width: 90px;
 }
 
-/*Начинаю делать переключение слайдов
+/*Начинаю делать скрытый подкаталог
 ------------------------------------------------------*/
 
-.slider-controls label {
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    margin-right: 20px;
-  
-    vertical-align: top;
-  
-    background-color: transparent;
-    border: 1px solid #000000;
-    border-radius: 50%;
-    cursor: pointer;
+
+.subcatalog {
+    display: none;
+    position: absolute;    
+    background-color: #f7e296;
+    top: 18px;
+    left: -60px;
+    z-index: 50;
+    min-height: 149px;
+    width: 1160px;
+    padding-top: 25px;
 }
 
-.slider-controls {
-    position: absolute;
-    right: 65px;
-    bottom: 148px;
-    z-index: 20;
+.subcatalog ul {
+    margin: 0;
+    padding: 0;
+}
 
-    font-size: 0;
+.subcatalog ul:first-child {
+    padding-left: 60px;
+    margin-right: 35px;
+}
+
+.subcatalog ul:nth-child(2) {
+    margin-right: 75px;
+}
+
+.subcatalog a {
+    font-family: "open_sanslight";
+    font-size: 15px;
+    line-height: 36px;
+    letter-spacing: 0.01em;
+    color: #000000;
+    text-transform: none;
+}
+
+.catalog-button {
+    position: relative;
+}
+
+.subcatalog:hover {
+    display: flex;
+}
+
+.catalog-button:hover ~ .subcatalog,
+.catalog-button:active ~ .subcatalog  {
+    display: flex;
+    z-index: 50;
 }
