--- a/css/style.css
+++ b/css/style.css
@@ -615,7 +615,6 @@ ____________________________
     display: flex;
     justify-content: space-between;
     padding: 0;
-    margin-bottom: 86px;
 }
 
 .preview-item .container-preview {
@@ -630,25 +629,39 @@ ____________________________
 .pagination-helper-slider,
 .help-list {
     display: flex;
-    align-items: center;
+    margin: 0;
+}
+
+.help-list {
+    position: relative;
+    margin-right: 245px;
 }
 
 .pagination-helper-slider {  
-    min-height: 388px;  
+    min-height: 315px;  
     margin-bottom: 93px;
+    padding-top: 90px;
 
-    background-image: linear-gradient(white 35%, #e5e5e5 35%);
+    background-image: linear-gradient(white 29.5%, #e5e5e5 29.5%);
 }
 
 .pagination-helper-slider .text {
-    width: 486px;
-    margin-left: 116px;
+    width: 460px;
+    position: relative;
+}
 
-    align-self: center;
+.text h3 {
+    margin: 0;
+    margin-bottom: 30px;
+}
+
+.text p {
+    margin: 0;
 }
 
 .help-list {
     flex-direction: column;
+    padding-top: 10px;
     
 }
 
@@ -966,33 +979,43 @@ _____________________________________*/
 --------------------------------------------------------*/
 
 .help-list button {
-    background-color: #e5e5e5;
+    background-color: transparent;
 
     position: relative;
+
+    outline: none;
 }
              
 .help-list .button-warranty::after {
     content: "";
     width: 118px;
-    height: 39px;
-    background-color: black;
-    position: absolute;
-    right: -118px;
-    top: 0;
-
-    
-}
-
-.help-list .button-delivery::after {
-    content: "";
-    width: 118px;
-    height: 39px;
+    height: 40px;
     background-color: black;
     position: absolute;
     right: -118px;
     top: 0;
 
     display: none;
+}
+
+.button-warranty:focus::after {
+    display: inline;
+}
+
+.help-list .button-delivery::after {
+    content: "";
+    width: 118px;
+    height: 40px;
+    background-color: black;
+    position: absolute;
+    right: -118px;
+    top: 0;
+
+    display: none;
+}
+
+.button-delivery:focus::after {
+    display: inline;
 }
 
 .help-list .button-credit::after {
@@ -1003,9 +1026,51 @@ _____________________________________*/
     position: absolute;
     right: -118px;
     top: 0;
-
-    visibility: hidden;
+    display: none;
 }
+
+.button-credit:focus::after {
+    display: inline;
+}
+
+.container-help-list {
+    width: 1440px;
+    margin: auto;
+}
+
+.pagination-helper-slider {
+    padding-left: 100px;
+}
+
+.pagination-helper {
+    margin-bottom: 20px;
+}
+
+.pagination-helper-slider h3 {
+    position: relative;
+}
+
+.help-list::before {
+    content: "";
+    width: 1px;
+    height: 315px;
+    border: 3px solid black;
+    background-color: black;
+    position: absolute;
+    right: -123px;
+    top: -75px;
+}
+
+.text-delivery::after {
+    content: "";
+    position: absolute;
+    right: -225px;
+    top: 15px;
+    width: 134px;
+    height: 186px;
+    background: url("../img/delivery.svg") no-repeat;
+}
+
 
 /*Блок с доставкой, гарантией и кредитом не доделан. оставлю на потом.
 Начинаю делать блоки О нас и Контакты*/
@@ -1058,7 +1123,7 @@ _____________________________________*/
 
 .about-us .button {
     display: block;
-    margin-left: 25px;
+    margin-left: 22px;
 }
 
 .contacts {
@@ -1074,7 +1139,7 @@ _____________________________________*/
 }
 
 .contacts .button {
-    margin-left: 45px;
+    margin-left: 41px;
 }
 
 
