--- a/css/style.css
+++ b/css/style.css
@@ -382,6 +382,8 @@ ____________________________
 
 .catalog-item {
     list-style-type: none;
+
+    position: relative;
 }
 
 .catalog-item a {
@@ -1453,4 +1455,56 @@ form.filter {
 .catalog-button:active ~ .subcatalog  {
     display: flex;
     z-index: 50;
+}
+
+
+/*Начинаю длать скрытую маску товара при наведении
+____________________________________________________
+________________________________________________*/
+
+.catalog-item:hover .mask-of-item {
+    display: flex;
+}
+
+
+.catalog-item:hover .mask-of-item {
+    display: flex;
+    opacity: 1; 
+}
+
+.mask-of-item {
+    width: 100%;
+    height: 384px;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    background-color: rgba(255, 255, 255, 0.3);
+    cursor: pointer;
+}
+
+.button-basket {
+    margin-top: 170px;
+    margin-bottom: 20px;
+}
+
+.button-add {
+    font-family: "open_sanslight", "Arial", sans-serif;
+    font-size: 13px;
+    line-height: 36px;
+    letter-spacing: 0.01em;
+    border: none;
+    background: none;
+    cursor: pointer;
+    color: rgba(0, 0, 0, 0.5);
+    outline: none;
+}
+
+.button-add:hover {
+    color: rgba(0, 0, 0, 1);
+}
+
+.button-add:active {
+    color: rgba(0, 0, 0, 0.2);
 }
