--- a/css/style.css
+++ b/css/style.css
@@ -1508,3 +1508,51 @@ ________________________________________________*/
 .button-add:active {
     color: rgba(0, 0, 0, 0.2);
 }
+
+
+/*Начинаю оформлять строку поиска в фокусе
+----------------------------------------------
+-----------------------------------------------*/
+
+input[type="search"]:focus {
+    outline: none;
+}
+
+input[type="search"]:focus ~ .button-search {
+    display: block;
+}
+
+.button-search {
+    display: none;
+    font-size: 15px;
+    line-height: 30px;
+    letter-spacing: 0.01em;
+    border: 2px solid black;
+    padding: 7px 18px;
+    background-color: transparent;
+    position: absolute;
+    top: -10px;
+    right: -248px;
+}
+
+.button-search::before {
+    content: "";
+    width: 400px;
+    height: 2px;
+    background-color: black;
+    position: absolute;
+    bottom: -2px;
+    left: -400px;
+}
+
+.button-search:hover,
+.button-search:focus {
+    display: block;
+    background-color: #000000;
+    color: #ffffff;
+}
+
+.button-search:active {
+    background-color: #000000;
+    color: rgba(255, 255, 255, 0.3);
+}
